client/stylesheets/main.styl
fonts = arial, helvetica, sans-serif
border-radius()
  -webkit-border-radius arguments
  -moz-border-radius arguments
  border-radius arguments
filter-tab-content-background-color()
  background-color #ffffff
filter-container-width()
  width: 479px

html, body
	margin 0
	padding 0

body
	font-family arial

.bootstrap-datetimepicker-widget.dropdown-menu
  position fixed
  font-size small

#elementDetailsContainer
  width 260px
  font-size small

.element-details-close
  line-height inherit

.element-details-path, .element-details-node
  padding 5px
  height 140px

.marker-icon
  cursor pointer

.tab-content
  max-height 800px
  overflow-x hidden
  overflow-y auto
  border-left: 1px solid #ddd
  border-right: 1px solid #ddd
  border-bottom: 1px solid #ddd
  filter-tab-content-background-color()

.nav-tabs > li > a
  padding 5px 10px

.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus
  filter-tab-content-background-color()

.date > span.input-group-addon
  background-color #ddd

.nav-tabs > li > a
  padding 5px 10px

#filterContainer
  font-size small
  background-color white
  padding 0px
  border-radius 5px
  filter-container-width()

#filterLoading
  display none

#filter
  font-size small
  margin-top 0
  filter-container-width()

#sidebar-flightData
  ilter-container-width()

.filter-heading
  font-size: 16px;
  font-weight: bold;
  position: absolute;
  right: 0;
  margin: 5px 15px 0px 0;
  bottom: -25px;
  color: #333;

.filter-row
  margin 5px -15px 2px -10px

.filter-first-row
  margin 9px -15px 2px -10px

.filter-last-row
  margin 5px -15px 11px -10px

.filter-header
  background-color #eee
  padding 5px
  min-width initial
  border-radius 2px

.filter-title
  display inline
  vertical-align middle
  font-weight bold
  margin 0 0 0 5px

.filter-label
  font-weight bold

.filter-group
  white-space nowrap
  padding 2px

.filter-footer
  margin 2px 0 0 0

.dow
  padding 0

.applyFilter
	padding 5px

.tokenized
  word-wrap normal

.tokenized.main
  max-width 310px

.tokenized.departure
  max-height 60px
  overflow-x hidden
  overflow-y auto

.tokenized.arrival
  max-height 60px
  overflow-x hidden
  overflow-y auto

.hamburger
  float left
  margin 2px

.row-status-bar
  margin 15px 5px 0 5px

.col-status-bar
  padding 0

.status-bar-text
  color #333
  font-style italic

.status-bar-counter
  margin 0px 5px 0 5px

.filter-status
  position relative
  margin-right 5px
  left -2px
  bottom -8px
  vertical-align middle
  color darkorange

.filter-status-message
  position relative
  left -2px
  bottom -8px
  font-size smaller
  font-weight bold
  color #333
  margin 0 3px 0 3px

.spinner
  position absolute
  right 15px
  top 17px
  font-size 16px
  color #666
  z-index 2000

.searchBar
  width 300px

.leaflet-container
  background-color #CDD2D4

.leaflet-top.leaflet-left
  z-index 1004
.leaflet-top.leaflet-right
  z-index 1003
.leaflet-bottom.leaflet-left
  z-index 1002
.leaflet-bottom.leaflet-right
  z-index 1001

#mapLegendPanel
	width 180px

p.intro
	line-height 1.5
	margin 5px 0 35px 0
	font-size larger

.legend
	font-size smaller
	font-weight bold
	margin-left 20px
	display inline-block
  position relative
	top -22px
	text-align left

.legendBlock
	width 17px
	height 17px
	vertical-align middle
	display inline-block

#container
	width 100%
	height 100%

.title
	margin-top 0
	margin-bottom 10px
	text-align center

.notice
	margin 10px 0 5px 0
	line-height 1.5
	text-align center

.info
	padding 6px 8px
	font 14px/16px fonts
	background white
	background rgba(white, 1)
	box-shadow 0 0 15px rgba(black, 0.2)
	border-radius 5px

@media all and (max-width: 480px)
	/* styles for iPhone/Android landscape (and really narrow browser windows) */
	.notice
		font-size: 11px

@media all and (max-width: 320px)
	/* styles for iPhone/Android portrait */
	.notice
		font-size 11px

@media all and (max-width: 240px)
	/* styles for smaller devices */
	.notice
		font-size 11px

.my-legend .legend-title
  text-align left
  margin-bottom 8px
  font-weight bold
  font-size 90%

.my-legend .legend-scale ul
  margin 0
  padding 0
  float left
  list-style none

.my-legend .legend-scale ul li
  display block
  float left
  width 50px
  margin-bottom 6px
  text-align center
  font-size 80%
  list-style none

.my-legend ul.legend-labels li span
  display block
  float left
  height 15px
  width 50px

.my-legend .legend-source
  font-size 70%
  color #999
  clear both
  width 200px

.my-legend a
  color #777

#dataTableContainer
  font-size small

#dataTableDiv
  width 405px

.dataTable
  width 500px

.dataTableContent
  overflow-x auto
  overflow-y auto

.pathTableRow
  width 350px
  text-align center
  cursor pointer
  cursor hand

.nodeTableRow, .heatmapTableRow
  width 350px
  text-align center

.activeRow
  background-color #d9fafe

.leaflet-heatmap-layer
  z-index -1

.leaflet-control-zoom
  clear none // allows horizontal stacking with filter

.filter-control
  clear none // allows horizontal stacking with zoom

.searchBar
  position relative

.twitter-typeahead
  position static !important // Overides typeahead's inline styling

.tt-dropdown-menu
  border-top-left-radius 0
  border-top-right-radius 0
  border 0

.airport-code
  position absolute
  left 10px
  top 5px
  min-width 15%
  font-size 115%
  font-weight bold
  font-weight 800
  color #666

.airport-info
  color #666
  font-size 95%
  .additional-info
    display block
    font-size 85%
    color #999
    font-style italic
  > span
    text-transform capitalize

.airport-footer
  color #666
  font-size 95%
  margin 2px 0 2px 15px

.pull-middle
  display table-cell
  vertical-align middle
  float none

.pager
  display inline

.slider-container
  margin 0 5px 0 5px

.slider.slider-horizontal
  width 250px

.slider.slider-horizontal .slider-handle
  margin-left -7px
  margin-top -3px

.slider-handle
  width 15px
  height 15px

.min-slider-handle
  opacity 1

.max-slider-handle
  opacity 1

.slider-selection
  background-image none
  background-color rgba(51, 122, 183, 0.25)

.tt-suggestion
  position relative
  padding 5px 10px 5px 20%
  border-bottom 1px solid #f9f9f9
  &:last-child
    border-bottom 0

.tt-suggestion
.tt-suggestion
  &.tt-cursor
  &.tt-is-under-cursor
    background lighten(#DDD, 10%)
    &.airport-name
      color #555
  strong
    color #000

.sidebar-pane
    width 550px

